Icons Done, Switch to MPMoviePlayer

--- a/KDIC/KDIC-Info.plist
+++ b/KDIC/KDIC-Info.plist
@@ -8,6 +8,34 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>icon-58</string>
+				<string>icon-80</string>
+				<string>icon-120</string>
+			</array>
+		</dict>
+	</dict>
+	<key>CFBundleIcons~ipad</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>icon-58</string>
+				<string>icon-29</string>
+				<string>icon-80</string>
+				<string>icon-40</string>
+				<string>icon-152</string>
+				<string>icon-76</string>
+				<string>icon-120</string>
+			</array>
+		</dict>
+	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>GrinnellAppDev.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
