--- a/KDIC/KDIC-Info.plist
+++ b/KDIC/KDIC-Info.plist
@@ -56,6 +56,8 @@
 	<array>
 		<string>audio</string>
 	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>Launch</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
