--- a/KDIC/KDIC-Info.plist
+++ b/KDIC/KDIC-Info.plist
@@ -36,6 +36,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>Launch Screen</string>
